projects/examples/source/12.01.11.cpp
//////////////////////////////////////////////////////////////////////////

#include <iostream>
#include <string>
#include <string_view>
#include <type_traits>

//////////////////////////////////////////////////////////////////////////

using namespace std::literals;

//////////////////////////////////////////////////////////////////////////

void test(std::string_view view) 
{
    std::cout << "test : view = " << view << '\n';
}

//////////////////////////////////////////////////////////////////////////

int main()
{
    auto string = "aaaaa"s; // support : compiler-explorer.com

//  ----------------------------------------------------------------------

    [[maybe_unused]] std::string_view view_1 = string;

//  ----------------------------------------------------------------------

    auto view_2 = "aaaaa"sv;

//  ----------------------------------------------------------------------

    static_assert(std::is_same_v < decltype(view_2), std::string_view > );

//  ----------------------------------------------------------------------

//  string.append("bbbbb"); // error

//  ----------------------------------------------------------------------
    
    test(string);
}

//////////////////////////////////////////////////////////////////////////